--- a/AskAnything-frontend/src/app/Components/community/community.component.html
+++ b/AskAnything-frontend/src/app/Components/community/community.component.html
@@ -4,7 +4,7 @@
         <div class="row">
             <br><br>
             <div class="card-panel white">
-                <span class="black-text text-darken-2"><h4 class="center-align">{{community.subredditName}}</h4></span>
+                <span class="black-text text-darken-2"><h4 class="center-align">{{community.communityName}}</h4></span>
                 <span class="black-text text-darken-2">{{community.description}}</span>
                 <span class="right">Total Posts: {{community.numberofPosts}}</span>
               </div>
