--- a/AskAnything-frontend/src/app/Components/one-post/one-post.component.html
+++ b/AskAnything-frontend/src/app/Components/one-post/one-post.component.html
@@ -3,7 +3,7 @@
         <div class="col s12 m11">
           <div class="card white">
             <span class="subreddit-info">
-              <span class="subreddit-text"><a class="posturl" routerLink="">{{post.subredditName}}</a></span>
+              <span class="subreddit-text"><a class="posturl" routerLink="">{{post.communityName}}</a></span>
               <span class="grey-text text-darken-2"> . Posted by <a class="username" routerLink="/user/{{post.userName}}">{{post.userName}}</a></span>
               <span class="grey-text text-darken-2"> . {{post.duration}}</span>
             </span>
