--- a/AskAnything-frontend/src/app/Components/sub-group-side-bar/sub-group-side-bar.component.html
+++ b/AskAnything-frontend/src/app/Components/sub-group-side-bar/sub-group-side-bar.component.html
@@ -4,7 +4,7 @@
         <hr />
     </div>
     <span *ngFor="let group of subgroup">
-        <div class="center-align"><a href="/community/{{group.id}}">{{group.subredditName}}</a></div>
+        <div class="center-align"><a href="/community/{{group.id}}">{{group.communityName}}</a></div>
         <hr />
     </span>
     <div style="text-align: center" *ngIf="viewAll">
