--- a/AskAnything-frontend/src/app/Components/view-post/view-post.component.html
+++ b/AskAnything-frontend/src/app/Components/view-post/view-post.component.html
@@ -9,7 +9,7 @@
           </div>
           <div class="col s12 m11">
             <span>
-              <span class="subreddit-text"><a class="post-url" href="">{{post.subredditName}}</a></span>
+              <span class="subreddit-text"><a class="post-url" href="">{{post.communityName}}</a></span>
               <span> . Posted
                 <span> {{post.duration}} </span>
                 by              
