--- a/AskAnything-frontend/src/app/Components/login/login.component.html
+++ b/AskAnything-frontend/src/app/Components/login/login.component.html
@@ -28,6 +28,9 @@
                               </div>
                               <button class="waves-effect waves-light btn" [disabled]="!Login.valid" type="submit" (click)="login()">Submit</button>
                         </form>
+                        <div>
+                        <h6 class="center-align"><a  [routerLink]="['/forgotpassword']" >Forgot password?</a></h6>
+                      </div>
                       </div>
                     </div>
             </div>
