--- a/AskAnything-frontend/src/app/app.component.html
+++ b/AskAnything-frontend/src/app/app.component.html
@@ -1,1 +1,2 @@
+<ngx-spinner bdColor = "rgba(3,3,23,0.97)" size = "medium" color = "rgba(23,227,225,0.94)" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
 <router-outlet></router-outlet>
